welcome/istio/istio-1.22.1/samples/bookinfo/networking/virtual-service-reviews-test-v3.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: reviews
spec:
  hosts:
    - reviews
  http:
  - match:
    - headers:
        end-user:
          exact: yaniv
    route:
    - destination:
        host: reviews
        subset: v2
      weight: 50
    - destination:
        host: reviews
        subset: v3
      weight: 50
  - route:
    - destination:
        host: reviews
        subset: v1
